...
    "requiresCredentialsInSettings": "{} needs additional credentials (in Settings)",
    "resetInstallStatus": "Reset install status",
    "resetInstallStatusForSelectedAppsQuestion": "Reset install status for selected apps?",
    "retry": "Retry",
    "reversePageTransitions": "Reverse page transition animations",
    "reverseSort": "Reverse sorting",
    "runBgCheckNow": "Run background update check now",
    "rustoreAggregatedAppNoApk": "RuStore lists this app from an external source and does not host its APK",
    "samsungGalaxyStoreApiError": "Samsung Galaxy Store API error",
    "search": "Search",
    "searchFailed": "{}: search failed ({})",
    "searchQuery": "Search query",
    "searchSomeSourcesLabel": "Search (some sources only)",
...
    "selectAppForDetails": "Select an app to see details",
    "selectURL": "Select URL",
    "selectURLs": "Select URLs",
    "selectX": "Select {}",
    "selectedCategorizeWarning": "This will replace any existing category settings for the selected apps.",
    "selfHostedNote": "The \"{}\" dropdown can be used to reach self-hosted/custom instances of any source.",
    "settings": "Settings",
    "share": "Share",
    "shareAppConfigLinks": "Share app configuration as HTML link",
    "shareSelectedAppURLs": "Share selected app URLs",
    "shizukuBinderNotFound": "Dhizuku or Shizuku services are not running",
    "shizukuOld": "Old Shizuku version (<11) - update it",
    "shizukuOldAndroidWithADB": "Shizuku running on Android < 8.1 with ADB - update Android or use Dhizuku or Sui instead",
...
    "uptodownSearchError": "Uptodown search failed",
    "upToDateApps": "Up to date apps",
    "update": "Update",
    "updateAvailable": "Update available",
    "updateUrl": "Update URL",
    "updateX": "Update {}",
    "updates": "Updates",
    "updatesAvailable": "Updates available",
    "updatesAvailableNotifChannel": "Updates available",
    "updatesAvailableNotifDescription": "Notifies the user that updates are available for one or more apps tracked by Obtainium",
    "url": {
        "one": "{} URL",
        "other": "{} URLs"
...
